--- a/style.css
+++ b/style.css
@@ -11,8 +11,14 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    font-size:15px;
+    font-size: 15px;
     
+
+}
+
+
+.main{
+margin: 0 auto;
 
 }
 
